--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,10 @@
 {{ define "main" }}
 	<main>
 		<article>
-			<h1>{{ .Title }}</h1>
-			<time>{{ .Date.Format "02.01.2006 15:04" }}</time>
+			<h3>{{ .Title }}</h3>
+			<time>{{ .Date.Format "Jan 2, 2006" }}</time>
+			<hr/>
+			<br/>
 			<div>
 				{{ .Content }}
 			</div>
@@ -13,11 +15,6 @@
 					<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
 					{{ end }}
 				</ul>
-			</div>
-			{{ end }}
-			{{ with .Site.DisqusShortname }}
-			<div>
-				{{ template "_internal/disqus.html" . }}
 			</div>
 			{{ end }}
 		</article>
