--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,4 +1,4 @@
 <article>
 	<time>{{ .Date.Format "Jan 2, 2006" }}</time>
-	<p><a href="{{ .Permalink }}">{{ .Title }}</a></p>
+	<p class="summary"><a href="{{ .Permalink }}">{{ .Title }}</a></p>
 </article>
