Update summary.html style.css.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,12 @@ p {
 .summary {
     display: inline;
     padding-left: 1em;
+    line-height: 2em;
+}
+
+.fixed-width {
+    display: inline-block;
+    min-width: 6em;
 }
 
 a {
